<resources>
    <string name="app_name">Wechat</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_add">Add</string>
    <string name="menu_group_chat">Group Chat</string>
    <string name="menu_advise">Advice</string>
    <string name="menu_new_friend">New Friends</string>
    <string name="menu_scan">Scan</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_discovery">Discovery</string>
    <string name="tab_me">Me</string>
</resources>
