<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tab="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
            android:id="@+id/id_viewpager"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
    </android.support.v4.view.ViewPager>
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="@drawable/bottom_bar_bg"
            android:layout_height="60dp">
        <com.project.stephencao.mywechat6_0.view.MyBottomBarView
                android:layout_width="0dp"
                tab:color="#ff45c01a"
                tab:text="@string/app_name"
                android:id="@+id/id_bottom_bar_wechat"
                android:padding="5dp"
                tab:text_size="12sp"
                tab:icon="@mipmap/ic_menu_start_conversation"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        <com.project.stephencao.mywechat6_0.view.MyBottomBarView
                android:layout_width="0dp"
                tab:color="#ff45c01a"
                android:padding="5dp"
                tab:text="@string/tab_contacts"
                tab:text_size="12sp"
                android:id="@+id/id_bottom_bar_contact"
                tab:icon="@mipmap/ic_menu_friendslist"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        <com.project.stephencao.mywechat6_0.view.MyBottomBarView
                android:layout_width="0dp"
                tab:color="#ff45c01a"
                tab:text="@string/tab_discovery"
                tab:text_size="12sp"
                android:padding="5dp"
                android:id="@+id/id_bottom_bar_discovery"
                tab:icon="@mipmap/ic_menu_emoticons"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        <com.project.stephencao.mywechat6_0.view.MyBottomBarView
                android:layout_width="0dp"
                tab:color="#ff45c01a"
                tab:text="@string/tab_me"
                android:padding="5dp"
                android:id="@+id/id_bottom_bar_me"
                tab:text_size="12sp"
                tab:icon="@mipmap/ic_menu_allfriends"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>